[ACPI] fix double quoted params such as acpi_os_string="a b c" by Christian Lupien http://bugzilla.kernel.org/show_bug.cgi?id=3242